--- a/frontend/sass/components/_skills-popup.scss
+++ b/frontend/sass/components/_skills-popup.scss
@@ -284,7 +284,7 @@
 		justify-self: center;
 		font-size: $default-font-size * 2;
 		position: absolute;
-		top: 58.5%;
+		top: 50%;
 	}
 
 	&--active {
